@@ -140,6 +140,9 @@ Jobs
 
 * Avoid cluttering global log file with job run messages.
 
+* Allow parameters passed to jobs, acknowledges --email commandline option
+  now (#103).
+ 
 UI
 --
 
